# haskell-programming-raytracer

./: .gitignore  README.md  haskell-programming-raytracer.cabal  mandelbrot.ppm  pc-fractals.cabal  pc-raytracing.cabal
output/: abstraction.ppm  foo.ppm  mandelbrot.ppm
src/: Lib.hs
