name:                pc-raytracing
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jakzale/pc-fractals#readme
license:             BSD3
license-file:        LICENSE
author:              Jakub Zalewski
maintainer:          jakzale@gmail.com
copyright:           Copyright: (c) 2016 Jakub Zalewski
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jakzale/pc-fractals
